@@ -47,46 +47,48 @@ GLESDebugDraw::GLESDebugDraw( float32 ratio )
 void GLESDebugDraw::initShader( void )
 {
 	mShaderProgram = [[CCGLProgram alloc] initWithVertexShaderFilename:@"Position_uColor.vsh"
-												fragmentShaderFilename:@"Position_uColor.fsh"];
-	
+											  fragmentShaderFilename:@"Position_uColor.fsh"];
+
 	[mShaderProgram addAttribute:@"aVertex" index:kCCVertexAttrib_Position];
-	
+
 	[mShaderProgram link];
-	
+
 	[mShaderProgram updateUniforms];
-	
-	mColorLocation = glGetUniformLocation( mShaderProgram->program_, "u_color");	
+
+	mColorLocation = glGetUniformLocation( mShaderProgram->program_, "u_color");
 }
 
 void GLESDebugDraw::DrawPolygon(const b2Vec2* old_vertices, int32 vertexCount, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
 	ccVertex2F vertices[vertexCount];
-	
+
 	for( int i=0;i<vertexCount;i++) {
 		b2Vec2 tmp = old_vertices[i];
 		tmp *= mRatio;
 		vertices[i].x = tmp.x;
 		vertices[i].y = tmp.y;
 	}
-	
-	glUniform4f( mColorLocation, color.r, color.g, color.b, 1);
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, vertices);
-	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);	
-	
+	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
+
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
 void GLESDebugDraw::DrawSolidPolygon(const b2Vec2* old_vertices, int32 vertexCount, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
 	ccVertex2F vertices[vertexCount];
-	
+
 	for( int i=0;i<vertexCount;i++) {
 		b2Vec2 tmp = old_vertices[i];
 		tmp = old_vertices[i];
@@ -94,29 +96,31 @@ void GLESDebugDraw::DrawSolidPolygon(const b2Vec2* old_vertices, int32 vertexCou
 		vertices[i].x = tmp.x;
 		vertices[i].y = tmp.y;
 	}
-	
-	glUniform4f( mColorLocation, color.r*0.5f, color.g*0.5f, color.b*0.5f,0.5f);
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r*0.5f f2:color.g*0.5f f3:color.b*0.5f f4:0.5f];
+
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, vertices);
 
 	glDrawArrays(GL_TRIANGLE_FAN, 0, vertexCount);
-	
-	glUniform4f( mColorLocation, color.r, color.g, color.b,1);	
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
+
+	CC_INCREMENT_GL_DRAWS(2);
 
 	CHECK_GL_ERROR_DEBUG();
 }
 
 void GLESDebugDraw::DrawCircle(const b2Vec2& center, float32 radius, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
-	
 	const float32 k_segments = 16.0f;
 	int vertexCount=16;
 	const float32 k_increment = 2.0f * b2_pi / k_segments;
 	float32 theta = 0.0f;
-	
+
 	GLfloat				glVertices[vertexCount*2];
 	for (int32 i = 0; i < k_segments; ++i)
 	{
@@ -125,25 +129,27 @@ void GLESDebugDraw::DrawCircle(const b2Vec2& center, float32 radius, const b2Col
 		glVertices[i*2+1]=v.y * mRatio;
 		theta += k_increment;
 	}
-	
-	glUniform4f( mColorLocation, color.r, color.g, color.b,1);
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
-	
+
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
-	
+
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
 void GLESDebugDraw::DrawSolidCircle(const b2Vec2& center, float32 radius, const b2Vec2& axis, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
 	const float32 k_segments = 16.0f;
 	int vertexCount=16;
 	const float32 k_increment = 2.0f * b2_pi / k_segments;
 	float32 theta = 0.0f;
-	
+
 	GLfloat				glVertices[vertexCount*2];
 	for (int32 i = 0; i < k_segments; ++i)
 	{
@@ -152,28 +158,30 @@ void GLESDebugDraw::DrawSolidCircle(const b2Vec2& center, float32 radius, const 
 		glVertices[i*2+1]=v.y * mRatio;
 		theta += k_increment;
 	}
-	
 
-	glUniform4f( mColorLocation, color.r *0.5f, color.g*0.5f, color.b*0.5f,0.5f );
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r*0.5f f2:color.g*0.5f f3:color.b*0.5f f4:0.5f];
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
 	glDrawArrays(GL_TRIANGLE_FAN, 0, vertexCount);
 
 
-	glUniform4f( mColorLocation, color.r, color.g, color.b,1);
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
-	
+
 	// Draw the axis line
 	DrawSegment(center,center+radius*axis,color);
-	
+
+	CC_INCREMENT_GL_DRAWS(2);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
 void GLESDebugDraw::DrawSegment(const b2Vec2& p1, const b2Vec2& p2, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
-	glUniform4f( mColorLocation, color.r, color.g, color.b,1);
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 
 	GLfloat				glVertices[] = {
 		p1.x * mRatio, p1.y * mRatio,
@@ -184,6 +192,8 @@ void GLESDebugDraw::DrawSegment(const b2Vec2& p1, const b2Vec2& p2, const b2Colo
 
 	glDrawArrays(GL_LINES, 0, 2);
 	
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
@@ -200,10 +210,10 @@ void GLESDebugDraw::DrawTransform(const b2Transform& xf)
 
 void GLESDebugDraw::DrawPoint(const b2Vec2& p, float32 size, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
 
-	glUniform4f( mColorLocation, color.r, color.g, color.b,1);
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 
 //	glPointSize(size);
 
@@ -216,6 +226,8 @@ void GLESDebugDraw::DrawPoint(const b2Vec2& p, float32 size, const b2Color& colo
 	glDrawArrays(GL_POINTS, 0, 1);
 //	glPointSize(1.0f);
 	
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
@@ -226,12 +238,12 @@ void GLESDebugDraw::DrawString(int x, int y, const char *string, ...)
 	/* Unsupported as yet. Could replace with bitmap font renderer at a later date */
 }
 
-void GLESDebugDraw::DrawAABB(b2AABB* aabb, const b2Color& c)
+void GLESDebugDraw::DrawAABB(b2AABB* aabb, const b2Color& color)
 {
-	ccGLUseProgram( mShaderProgram->program_ );
-	ccGLUniformModelViewProjectionMatrix( mShaderProgram );
-	
-	glUniform4f( mColorLocation, c.r, c.g, c.b,1);
+	[mShaderProgram use];
+	[mShaderProgram setUniformForModelViewProjectionMatrix];
+
+	[mShaderProgram setUniformLocation:mColorLocation withF1:color.r f2:color.g f3:color.b f4:1];
 
 	GLfloat				glVertices[] = {
 		aabb->lowerBound.x * mRatio, aabb->lowerBound.y * mRatio,
@@ -239,9 +251,11 @@ void GLESDebugDraw::DrawAABB(b2AABB* aabb, const b2Color& c)
 		aabb->upperBound.x * mRatio, aabb->upperBound.y * mRatio,
 		aabb->lowerBound.x * mRatio, aabb->upperBound.y * mRatio
 	};
-	
+
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
 	glDrawArrays(GL_LINE_LOOP, 0, 8);
 	
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
